# everest-table

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: static-checks.yml
src/everest_table/: __init__.py  _everest_config.py  _results_table.py  _utils.py  everest.py
