[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "everest-table"
description = "A ropt plugin to add tabular output to Everest"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["tabulate"]

[project.urls]
"Homepage" = "https://github.com/TNO-ropt/everest-table"
"Repository" = "https://github.com/TNO-ropt/everest-table"
"Bug Tracker" = "https://github.com/TNO-ropt/everest-table/issues"

[project.entry-points."ropt.plugins.event_handler"]
everest_table = "everest_table.everest:EverestTableEventHandlerPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
everest_table = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "everest_table.version.__version__" }

[tool.setuptools_scm]
write_to = "src/everest_table/version.py"


[tool.ruff.format]
exclude = ["src/everest_table/version.py", "build"]

[tool.ruff.lint]
exclude = ["test-data/*"]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "E501",   # line-too-lone
    "S101",   # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["everest.*", "ert.*"]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = ["mypy>=1.11.2", "pandas-stubs>=2.0.2.230605", "ruff>=0.6.5"]
