[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "everest-table"
description = "A ropt plugin to add tabular output to Everest"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["tabulate"]

[project.urls]
"Homepage" = "https://github.com/TNO-ropt/everest-table"
"Repository" = "https://github.com/TNO-ropt/everest-table"
"Bug Tracker" = "https://github.com/TNO-ropt/everest-table/issues"

[project.entry-points."ropt.plugins.event_handler"]
everest_table = "everest_table.everest:EverestTableEventHandlerPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
everest_table = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "everest_table.version.__version__" }

[tool.setuptools_scm]
write_to = "src/everest_table/version.py"


[tool.ruff.format]
exclude = ["src/everest_table/version.py", "build"]

[tool.ruff.lint]
preview = true
exclude = ["test-data/*"]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "CPY",    # flake8-copyright
    "E501",   # line-too-long
    "S101",   # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["everest.*", "ert.*"]
ignore_missing_imports = true

[dependency-groups]
dev = ["mypy", "pandas-stubs", "ruff", "types-tabulate"]
